# Django-Simorgh

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
django_simorgh/: __init__.py  apps.py  context_processors.py
django_simorgh/locale/fa/LC_MESSAGES/: django.mo  django.po
django_simorgh/static/django_simorgh/css/: admin.css
django_simorgh/static/django_simorgh/js/: admin.js
django_simorgh/templates/admin/: app_index.html  base.html  base_site.html  change_form.html  change_list.html  delete_confirmation.html  filter.html  index.html  login.html  pagination.html  submit_line.html
django_simorgh/templates/admin/includes/: fieldset.html  simorgh_sidebar.html
django_simorgh/templatetags/: simorgh_admin.py
scripts/: deploy_pypi.sh
